
	* man/C/dpkg-scanpackages.1: Document new dpkg-scanpackages
	-m option added by Don Armstrong.
	* scripts/dpkg-scanpackages.pl: Fix some bugs introduced by
	the rewrite.

	* man/C/dpkg-source.1: Document that the -sX switches for
	dpkg-source are mutually exclusive and only one can be in
	effect.
	* scripts/dpkg-source.pl: Warn if more than one -sX switch
	is specified on the command line.

2006-01-29  Don Armstrong  <don@debian.org>

	* scripts/dpkg-scanpackages.pl: Rewrite the script to support
	multiple versions of packages in a single Packages file;
	use Getopt::Long instead of attempting to parse the command line
	ourselves and doing it badly;
	get rid of unecessary hashes and arrays that aren't used at all;
	output help when given the --help/-h/-? options

2006-01-29  maximilian attems  <debian@sternwelten.at>

	* scripts/dpkg-source.pl: Add files and
	dirs used by bzr to $diff_ignore_default_regexp.

2006-01-29  Julian Gilbey  <jdg@debian.org>

	* scripts/dpkg-buildpackage.sh: Create .changes
	file even if signing .dsc file fails to make it
	easier to just sign the package later.

	* scripts/dpkg-buildpackage.sh: Change heuristics
	of gpg check so that it allows for more complex
	setups.

2006-01-29  Anand Kumria  <wildfire@progsoc.org>

	* scripts/dpkg-source.pl (checkdiff): Ignore comments
	hunk header line as used by diff -p.

2006-01-29  Guillem Jover  <guillem@debian.org>

	* utils/start-stop-daemon.c (do_help): Print the proper version giving
	it as an argument to printf, instead of printing 'VERSION'.

2006-01-29  Guillem Jover  <guillem@debian.org>

	* configure.ac: Bump version to 1.13.14~.

2006-01-28  Frank Lichtenheld  <djpig@debian.org>

	* configure.ac: Release 1.13.13

2006-01-28  Guillem Jover  <guillem@debian.org>

	* scripts/dpkg-architecture.pl: Do not print the warning about a
	missmatch between gcc target machine type and GNU target system
	type if the actions are '-e' or '-i'.

2006-01-27  Frank Lichtenheld  <djpig@debian.org>
