@@ -21,6 +21,8 @@ dpkg (1.13.14~) UNRELEASED; urgency=low
   * Let warn dpkg-source if more than one -sX option was given and
     document the behaviour in this case in the man page.
     Closes: #246637
+  * Make dpkg-source -b more robust regarding to existing symlinks
+    by creating new files in a secure manner. Closes: #178839, #338591
 
  -- Guillem Jover <guillem@debian.org>  Sun, 29 Jan 2006 06:02:58 +0200
 
